# jscompiler

./: base_visitor.cpp  code.js  main.cpp  meson.build  out.txt
subprojects/: .gitignore  tree-sitter-javascript.wrap  tree-sitter.wrap
subprojects/packagefiles/tree_sitter_javascript_patch/: meson.build
